--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_salvar">Salvar</string>
     <string name="title_cad_produto">Cadastro de Produto</string>
+
+    <string-array name="categoriadoproduto">
+        <item>Bebida</item>
+        <item>Produto de Limpeza</item>
+        <item>Frutas</item>
+    </string-array>
+
 </resources>
