20230821 1708 Final da aula com indicação dos atributos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_cad_produto">Cadastro de Produto</string>
 
     <string-array name="categoriadoproduto">
+        <item>Selecionar Categoria</item>
         <item>Açougue</item>
         <item>Bebida</item>
         <item>Cereais</item>
