--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_salvar">Salvar</string>
-    <string name="title_cad_produto">Cadastro de Produto</string>
+    <string name="title_cad_produto">Cadastro</string>
+    <string name="title_con_produto">Consulta</string>
 
     <string-array name="categoriadoproduto">
         <item>Selecionar Categoria</item>
